# GMSC-mapper

./: AGENTS.md  ChangeLog  LICENSE  MANIFEST.in  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt  setup.py  tests.sh  whatsnews.md
.github/workflows/: test_gmsc_mapper.yml
GMSC-mapper/: __init__.py  main.py  map_habitat.py  map_quality.py  map_taxonomy.py  predict.py  utils.py
examples/: GMSC10.90AA.cdd.tsv.xz  GMSC10.90AA.high_quality.tsv.xz  example.fa  example.faa  example.fna  example_diamond_db.dmnd  example_mmseqs_db  example_mmseqs_db.index  example_mmseqs_db.lookup  example_mmseqs_db.source  example_mmseqs_db_h  example_mmseqs_db_h.index  ref_domain.txt  ref_habitat.npy  ref_habitat.txt  ref_habitat_index.tsv  ref_quality.txt  ref_taxonomy.npy  ref_taxonomy.txt  ref_taxonomy_index.tsv  target.faa  taxonomy.db
examples/output/: predicted.filterd.smorf.faa  quality.out.smorfs.tsv  summary.txt  taxonomy.out.smorfs.tsv
examples/output_diamond/: diamond.out.smorfs.tsv  habitat.out.smorfs.tsv  quality.out.smorfs.tsv  summary.txt  taxonomy.out.smorfs.tsv
examples/output_mmseqs/: habitat.out.smorfs.tsv  mapped.smorfs.faa  mmseqs.out.smorfs.tsv  predicted.filterd.smorf.faa  quality.out.smorfs.tsv  summary.txt  taxonomy.out.smorfs.tsv
gmsc_mapper/: fasta.py  filter_length.py  gmsc_mapper_version.py  main.py  map_domain.py  map_habitat.py  map_quality.py  map_taxonomy.py  predict.py  translate.py  utils.py
tests/: alignment.tsv  conftest.py  diamond_contig.py  diamond_gene.py  diamond_protein.py  filtered.faa  mmseqs_contig.py  test.fa  test.fa.bz2  test.fa.xz  test.faa  test.fna  test_contig.fa  test_contig.fa.bz2  test_contig.fa.xz  test_diamond_contig.py  test_diamond_gene.py  test_diamond_protein.py  test_domain.py  test_domain.txt  test_filter_length.faa  test_filter_length.fna  test_filter_length.py  test_generate_fasta.py  test_habitat.npy  test_habitat.py  test_habitat.txt  test_habitat_index.txt  test_mmseqs_contig.py  test_no_annotation.py  test_no_annotation_errors.py  test_predict.py  test_quality.py  test_quality.txt  test_results.py  test_taxonomy.db  test_taxonomy.npy  test_taxonomy.py  test_taxonomy.txt  test_taxonomy_index.tsv  (+3 more)
tests/diamond_contig/: alignment.out.smorfs.tsv  domain.out.smorfs.tsv  mapped.smorfs.faa
tests/diamond_gene/: alignment.out.smorfs.tsv  domain.out.smorfs.tsv  habitat.out.smorfs.tsv  mapped.smorfs.faa  quality.out.smorfs.tsv  summary.txt  taxonomy.out.smorfs.tsv
tests/diamond_protein/: alignment.out.smorfs.tsv  domain.out.smorfs.tsv  habitat.out.smorfs.tsv  mapped.smorfs.faa  quality.out.smorfs.tsv  (+2 more)
(+4 files in other folders)
