[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "GMSC-mapper"
dynamic = ["version"]
description = "Command line tool to query the Global Microbial smORFs Catalog (GMSC)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Luis Pedro Coelho", email = "luis@luispedro.org" },
    { name = "Yiqian Duan", email = "yqduan20@fudan.edu.cn" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "atomicwrites",
    "biopython",
    "numpy",
    "pandas",
    "pyrodigal",
    "requests",
]

[project.urls]
Homepage = "https://github.com/BigDataBiology/GMSC-mapper"

[project.scripts]
gmsc-mapper = "gmsc_mapper.main:main"

[tool.setuptools.packages.find]
include = ["gmsc_mapper*"]

[tool.setuptools.dynamic]
version = {attr = "gmsc_mapper.gmsc_mapper_version.__version__"}
